[gd_scene load_steps=6 format=2]

[ext_resource path="res://dialogBox/prefab/dialog box.tscn" type="PackedScene" id=1]
[ext_resource path="res://test.gd" type="Script" id=6]
[ext_resource path="res://cam.gd" type="Script" id=7]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 20, 20 )

[sub_resource type="PrismMesh" id=2]

[node name="Spatial" type="Spatial"]
script = ExtResource( 6 )
player_node = NodePath("player")

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )

[node name="player" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.954256, 0 )
mesh = SubResource( 2 )

[node name="dialog box" parent="player" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, -8.35187e-23, 0, -8.35187e-23, 1, -3.10588e-22, 1.61986, -2.2037 )
reposition = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1911, 4.05849 )
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 162.0
margin_bottom = 262.0

[node name="Button" type="Button" parent="Control/VBoxContainer"]
margin_right = 162.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="Button2" type="Button" parent="Control/VBoxContainer"]
margin_top = 66.0
margin_right = 162.0
margin_bottom = 129.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="Button3" type="Button" parent="Control/VBoxContainer"]
margin_top = 133.0
margin_right = 162.0
margin_bottom = 195.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Button4" type="Button" parent="Control/VBoxContainer"]
margin_top = 199.0
margin_right = 162.0
margin_bottom = 262.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "player move"

[connection signal="pressed" from="Control/VBoxContainer/Button" to="." method="test1"]
[connection signal="pressed" from="Control/VBoxContainer/Button2" to="." method="test2"]
[connection signal="pressed" from="Control/VBoxContainer/Button3" to="." method="test3"]
[connection signal="pressed" from="Control/VBoxContainer/Button4" to="." method="player_move"]
